--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,9 @@
 @import './Reset.scss';
 @import './MainApp.scss';
-@import './ClientQuiz.scss';
+@import './Quiz.scss';
 @import './Start.scss';
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
+
 html {
     font-family: 'Varela Round', sans-serif;
     font-size: 16px;
