--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Your project title</title>
+  <title>Quiz</title>
   <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 
