--- a/src/styles/Quiz.scss
+++ b/src/styles/Quiz.scss
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-rows: 4fr 6fr;
     grid-template-columns: 1fr;
+    height: 100vh;
+
     &__question {
         display: grid;
         align-self: center;
@@ -10,6 +12,7 @@
         color: white;
         font-weight: 900;
     }
+    
     &__answers {
         display: grid;
         grid-gap: 0.5rem;
