changes in class names in component LandingPage from start to landingPage and all other relative changes to that change

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,7 @@
 @import './Reset.scss';
 @import './MainApp.scss';
 @import './Quiz.scss';
-@import './Start.scss';
+@import './LandingPage.scss';
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
 html {
