--- a/src/styles/Quiz.scss
+++ b/src/styles/Quiz.scss
@@ -1,47 +1,47 @@
 .quiz {
+  display: grid;
+  grid-template-rows: 4fr 6fr;
+  grid-template-columns: 1fr;
+  height: 100vh;
+
+  &__question {
     display: grid;
-    grid-template-rows: 4fr 6fr;
+    align-self: center;
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+    font-weight: 900;
+  }
+
+  &__answers {
+    display: grid;
+    grid-gap: 0.5rem;
+    grid-template-rows: repeat(4, 1fr);
     grid-template-columns: 1fr;
-    height: 100vh;
+  }
 
-    &__question {
-        display: grid;
-        align-self: center;
-        font-size: 1.5rem;
-        text-align: center;
-        color: white;
-        font-weight: 900;
-    }
-    
-    &__answers {
-        display: grid;
-        grid-gap: 0.5rem;
-        grid-template-rows: repeat(4, 1fr);
-        grid-template-columns:  1fr;
-    }
+  &__answer {
+    display: grid;
+    width: 100%;
+    height: 100%;
+  }
 
-    &__answer {
-        display: grid;
-        width: 100%;
-        height: 100%;
-    }
-
-    &__answer:nth-child(1) {
-        background-color: #77BB59;
-    }
-    &__answer:nth-child(2) {
-        background-color: #ECB83F;
-    }
-    &__answer:nth-child(3) {
-        background-color: #F55A3A;
-    }
-    &__answer:nth-child(4) {
-        background-color: #C8383B;
-    }
-    &__answerText {
-        display: grid;
-        align-self: center;
-        text-align: center;
-        cursor: pointer;
-    }
+  &__answer:nth-child(1) {
+    background-color: #77bb59;
+  }
+  &__answer:nth-child(2) {
+    background-color: #ecb83f;
+  }
+  &__answer:nth-child(3) {
+    background-color: #f55a3a;
+  }
+  &__answer:nth-child(4) {
+    background-color: #c8383b;
+  }
+  &__answerText {
+    display: grid;
+    align-self: center;
+    text-align: center;
+    cursor: pointer;
+  }
 }
