--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,7 @@
 @import "./Quiz.scss";
 @import "./LandingPage.scss";
 @import "./Timer.scss";
+@import "./Player.scss";
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
 
 html {
