--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -20,9 +20,8 @@ $input-text-active: #BFD2FF;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%; // border: 1px solid red;
+    height: 100%; 
     &__form {
-        // border: 1px solid rgb(0, 255, 157);
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: min-content 1fr;
