--- a/src/styles/Quiz.scss
+++ b/src/styles/Quiz.scss
@@ -1,47 +1,160 @@
 .quiz {
-  display: grid;
-  grid-template-rows: 4fr 6fr;
-  grid-template-columns: 1fr;
-  height: 100vh;
-
-  &__question {
     display: grid;
-    align-self: center;
-    font-size: 1.5rem;
-    text-align: center;
-    color: white;
-    font-weight: 900;
-  }
+    grid-template-areas: 
+    'timer' 
+    'question' 
+    'answers' 
+    'players'
+    ;
+    grid-template-rows: min-content min-content min-content 20%;
+    height: 100vh;
 
-  &__answers {
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: 1fr;
-  }
+    &__players {
+      margin-top: 1rem;
+      display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+        grid-area: players;
+        justify-content: center;
+        align-items: center;
+        // justify-self: center;
+    }
 
-  &__answer {
-    display: grid;
-    width: 100%;
-    height: 100%;
-  }
-
-  &__answer:nth-child(1) {
-    background-color: #77bb59;
-  }
-  &__answer:nth-child(2) {
-    background-color: #ecb83f;
-  }
-  &__answer:nth-child(3) {
-    background-color: #f55a3a;
-  }
-  &__answer:nth-child(4) {
-    background-color: #c8383b;
-  }
-  &__answerText {
-    display: grid;
-    align-self: center;
-    text-align: center;
-    cursor: pointer;
-  }
+    &__timer {
+        grid-area: timer;
+        justify-self: center;
+    }
+    &__question {
+        display: grid;
+        grid-area: question;
+        align-self: center;
+        font-size: 2.5rem;
+        text-align: center;
+        color: white;
+        font-weight: 900;
+        margin-bottom: 1rem;
+    }
+    &__answers {
+        display: grid;
+        grid-area: answers;
+        grid-gap: 2rem;
+        grid-auto-rows: 4rem;
+        grid-template-columns: 1fr 1fr;
+    }
+    &__answer {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        margin: 1rem 0;
+      font-size: 5vw;
+      @media (min-width: 40em) {
+          font-size: 2em;
+      }
+      border: none; // background-color: rgb(235,235,240);
+      // -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+      user-select: none;
+      position: relative;
+      z-index: 1;
+      padding: 0; //shadow
+      &:before {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          width: 10px;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          background-color: rgba(0, 10, 50, 0.2);
+          transition: transform 0.6s cubic-bezier(0, .90, .13, .90);
+          transform: translate3D(0, 0, 0);
+      }
+      &:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgb(235, 235, 240);
+          z-index: -1;
+      }
+      &:hover,
+      &:focus {
+          &:before {
+              transform: translate3D(10px, 0, 0);
+          }
+      }
+      &:active {
+          &:before {
+              transform: translate3D(0, 0, 0);
+          }
+      } // End Shadow
+      &:focus,
+      &:active {
+          outline: none;
+      } //The button-part with the text
+      .button__inner {
+          text-transform: uppercase;
+          letter-spacing: 0.15em;
+          color: #333;
+          padding: 1em 1.5em;
+          background-color: #fbfbfb;
+          display: block;
+          width: 100%;
+          height: 100%;
+          transition: transform 0.6s cubic-bezier(0, .90, .13, .90);
+          position: relative;
+      }
+      &:hover,
+      &:focus {
+          .button__inner {
+              transform: translate3D(0, -10px, 0);
+          }
+      }
+      &:active .button__inner {
+          transform: translate3D(0, 0, 0);
+      }
+      &:hover,
+      &:focus {
+          .button__inner {
+              background-color: #fff;
+          }
+      }  
+    }
+    .button--secondary {
+      background-color: #00d18e;
+      z-index: 0;
+      &:after {
+          background-color: #00d18e;
+      }
+      .button__inner {
+          background-color: #00ffb2;
+      }
+      &:hover,
+      &:focus {
+          .button__inner {
+              background-color: #11ffb3;
+          }
+      }
+    }
+    &__answer:nth-child(1) {
+        background-color: #77bb59;
+    }
+    &__answer:nth-child(2) {
+        background-color: #ecb83f;
+    }
+    &__answer:nth-child(3) {
+        background-color: #f55a3a;
+    }
+    &__answer:nth-child(4) {
+        background-color: #c8383b;
+    }
+    &__answerText {
+        display: grid;
+        align-self: center;
+        text-align: center;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
 }
