first player name color

--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -22,7 +22,7 @@
 .player:nth-of-type(2) {
     .player__score,
     .player__name {
-        color: black;
+        color: rgb(174, 21, 21);
     }
 }
 
